--- a/theseus/index.html
+++ b/theseus/index.html
@@ -368,7 +368,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 3 ========= -->
     <div id="ch3" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -461,7 +485,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 5 ========= -->
     <div id="ch5" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -556,7 +604,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 7 ========= -->
     <div id="ch7" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -650,7 +722,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 9 ========= -->
     <div id="ch9" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -743,7 +839,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 11 ========= -->
     <div id="ch11" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -836,7 +956,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 13 ========= -->
     <div id="ch13" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -929,7 +1073,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 15 ========= -->
     <div id="ch15" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -1023,7 +1191,31 @@
       </div>
     </div>
 
-    <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- ========= CHAPTER 17 ========= -->
     <div id="ch17" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -1118,8 +1310,31 @@
       </div>
     </div>
 
-    <hr>
-
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
     <!-- ========= CHAPTER 19 ========= -->
      <div id="ch19" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
