--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -160,8 +160,8 @@
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Constitutional Reform Package 1989</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <span class="file-title">Constitutional Reform Package 1989 (Ley 18825)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1-dTgSyR8K5A426ahhQwBOsfUMKDZ3_J0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1980; v. 1989)</span>
@@ -299,15 +299,15 @@
       </li>
       <li class="item-row">
         <span class="file-title">Harvey, D. (2005). <em>A Brief History of Neoliberalism</em>. Oxford: Oxford University Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://academic.oup.com/book/40603" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Joignant, A.; Somma, N. (2022). <em>Social Protest and Conflict in Radical Neoliberalism: Chile, 2008–2020</em>. Cham: Palgrave Macmillan.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Joignant, A.; Somma, N. (2024). <em>Social Protest and Conflict in Radical Neoliberalism: Chile, 2008–2020</em>. Cham: Palgrave Macmillan.</span>
+        <a class="tiny-link" href="https://link.springer.com/book/10.1007/978-3-031-58132-8" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Manuel, A. (2002). The Chilean health system: 20 years of reforms. <em>Salud Pública de México</em>, 44(1), 60–68.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://pubmed.ncbi.nlm.nih.gov/11910721/" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Mesa-Lago, C.; Bertranou, F. (2016). Pension reforms in Chile and social security principles, 1981–2015. <em>International Social Security Review</em>, 69(1), 25–45.</span>
@@ -434,8 +434,8 @@
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Constitutional Reform Package 2005</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <span class="file-title">Constitutional Reform Package 2005 (Ley 20050)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/10xa-SfT5UKlvQ1pUtNXUK7-zJMR4_KA0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
     </ul>
 
@@ -1535,8 +1535,8 @@
         <a class="tiny-link" href="#" download>PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Propuesta de Nueva Constitución (2022).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <span class="file-title">Constitutional Proposal (2022).</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL/view?usp=drive_link" download>PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Roll-call votes in the Commissions of the Constitutional Convention of Chile, 2021–2022 (dataset).</span>
@@ -1892,7 +1892,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitutional Proposal (2023).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1yxcCQqjSa7F7EgVOgLIPjB_-NoGtbgAs/view?usp=drive_link" download>PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title"><em>Roll-call votes in the Commissions of the Constitutional Council of Chile, 2023</em>. Dataset.</span>
@@ -1908,11 +1908,11 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Bunker, K. (2023c). ¿Cuál fue el nivel de acuerdo en el pleno del consejo constitucional de 2023? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(7): 1–4.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.researchgate.net/publication/376190302_Cual_fue_el_nivel_de_acuerdo_en_el_pleno_del_consejo_constitucional_de_2023" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Bunker, K. (2023d). ¿Cuál fue el nivel de acuerdo en las comisiones del consejo constitucional de 2023? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(8): 1–4.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.researchgate.net/publication/376190026_Cual_fue_el_nivel_de_acuerdo_en_las_comisiones_del_consejo_constitucional_de_2023" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Hinich, M.; Munger, M. (1992). A Spatial Theory of Ideology. <em>Journal of Theoretical Politics</em>, 4(1): 5–30.</span>
