--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -738,6 +738,20 @@
   <div class="section-title">CHAPTER 6 – A shifting political system</div>
   <div class="inner mt-3">
 
+
+    <div class="subhead">Documents</div>
+    <ul class="file-list">
+      <li class="item-row">
+        <span class="file-title">Constitution (1833)</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1925)</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+    </ul>
+
+
     <div class="subhead">Literature</div>
     <ul class="file-list">
       <li class="item-row">
