--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -743,11 +743,11 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitution (1833)</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1ogVxdOZddZQRZ5Qo_O6aTkTNs1Q04Jjv/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1925)</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
     </ul>
 
