--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -742,14 +742,42 @@
     <div class="subhead">Documents</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Constitution (1833)</span>
+        <span class="file-title">Constitution (1811)</span>
         <a class="tiny-link" href="https://drive.google.com/file/d/1ogVxdOZddZQRZ5Qo_O6aTkTNs1Q04Jjv/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
+        <span class="file-title">Constitution (1812)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1814)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1818)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1822)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1823)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1828)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitution (1833)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a><a class="tiny-link" href="#">Digital</a>
+      </li>
+        <li class="item-row">
         <span class="file-title">Constitution (1925)</span>
         <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
-    </ul>
+  </ul>
 
 
     <div class="subhead">Literature</div>
