--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -559,7 +559,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">El Ladrillo</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1iYznm46wfBfa74nIauaLICf79Fl9P7Sj/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1iYznm46wfBfa74nIauaLICf79Fl9P7Sj/view?usp=drive_link">PDF</a>
       </li>
     </ul>
 
