--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -783,10 +783,10 @@
     <div class="subhead">Literature</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Angell, A. (2003). “Party change in Chile in comparative perspective.” <em>Revista de Ciencia Política</em>, 23(2), 88–108.</span><a class="tiny-link" href="http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0718-090X2003000200005" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Angell, A. (2003). Party change in Chile in comparative perspective. <em>Revista de Ciencia Política</em>, 23(2), 88–108.</span><a class="tiny-link" href="http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0718-090X2003000200005" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Bunker, K. (2018). “La elección de 2017 y el fraccionamiento del sistema de partidos en Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em>, 9(2), 204–229.</span><a class="tiny-link" href="https://derechoycienciapolitica.uct.cl/index.php/RDCP/article/view/116" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Bunker, K. (2018). La elección de 2017 y el fraccionamiento del sistema de partidos en Chile. <em>Revista Chilena de Derecho y Ciencia Política</em>, 9(2), 204–229.</span><a class="tiny-link" href="https://derechoycienciapolitica.uct.cl/index.php/RDCP/article/view/116" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Bunker, K. (2025a). Challenging conventional wisdom in new democracies: Social diversity, electoral rules, and party system fragmentation in Chile. <em>Election Law Journal: Rules, Politics, and Policy</em> (online first), 1–25.</span><a class="tiny-link" href="https://www.liebertpub.com/doi/10.1089/elj.2024.0064" target="_blank" rel="noopener noreferrer">GO</a>
