--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -743,35 +743,35 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitution (1811)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1ogVxdOZddZQRZ5Qo_O6aTkTNs1Q04Jjv/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1ZtRlm2c0OD9r2oBg5EgZSvp9gh3UJLq1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1812)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1Jrs5NmzEqQ5i86Lbux9kTFc-b0cndjLI/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1814)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1OFOgThZS-qZejYmUrUMEJJ5kxjFeXlf0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1818)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/14wEV5QnqpnWPoEZNuB_mVzTdxBqqYiXs/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1822)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1SHqhjLzkWGkbFoVc-9Kd0QojaUKLWhB3/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1823)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1n7-80MfdlapxsSBjx37RuwYXxuPv--uR/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1828)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1VX7yCtdz4BmUWnOt_nNsvSHUrGSR7a8q/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitution (1833)</span>
-        <a class="tiny-link" href="https://drive.google.com/file/d/1rLpqk55pvJJ4QgAcnqNmHI53Ezy2l_TA/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a><a class="tiny-link" href="#">Digital</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1ogVxdOZddZQRZ5Qo_O6aTkTNs1Q04Jjv/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a><a class="tiny-link" href="https://drive.google.com/file/d/1Q2LCMw44xWuZCx5Q4GyySzhaJxuyjSWa/view?usp=drive_link">Digital</a>
       </li>
         <li class="item-row">
         <span class="file-title">Constitution (1925)</span>
