--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -157,7 +157,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitution (1980)</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1gDyGHxIq26dFfXKGfzTx3Dj-Z2wLw7J-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Constitutional Reform Package 1989 (Ley 18825)</span>
@@ -177,7 +177,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Bravo Lira, B. (1986). <em>Régimen de gobierno y partidos políticos en Chile, 1924–1973</em>. Santiago: Jurídica.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://books.google.cl/books?id=_u0bpGtpxH8C&printsec=copyrigh" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Cavallo, A.; Sepúlveda, O.; Salazar, M. (1988). <em>La historia oculta del régimen militar: Chile 1973–1988</em>. Santiago: Uqbar Editores.</span>
@@ -221,7 +221,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Valenzuela, A. (1978). <em>The Breakdown of Democratic Regimes: Chile</em>. Baltimore, MD: Johns Hopkins University Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://ediciones.udp.cl/libro/el-quiebre-de-la-democracia-en-chile/" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Valenzuela, J. S. (2005). ¿Hay que eliminar el sistema binominal? Una propuesta alternativa. <em>Política</em>, 45, 53–66.</span>
