--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -972,15 +972,15 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Law 18.603</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1VpXqygieEOhSrblO5JxfOeFYjzXDirGX/view?usp=drive_link" download>PDF</a>
       </li>
           <li class="item-row">
         <span class="file-title">Law 20.900</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1g-dmKIvrvp3JOnYbHsDBG7RGiSWk5JxE/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
           <li class="item-row">
         <span class="file-title">Law 20.915</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1yZ_our8BdEYQORzPeOnPrOkhjtBah248/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
 
     </ul>
